$Id$

OpenDNSSEC 1.4.2

Bugfixes:
* Signer Engine: Improved Inbound XFR checking.


OpenDNSSEC 1.4.1 - 2013-06-27

* SUPPORT-58: Extend ods-signer sign <zone> with --serial <nr> so that the user
  can specify the SOA serial to use in the signed zone [OPENDNSSEC-401].
* OPENDNSSEC-91: Make the keytype flag required when rolling keys

Bugfixes:
* SUPPORT-60: Fix datecounter in case inbound serial is higher than outbound
  serial [OPENDNSSEC-420].
* OPENDNSSEC-247: Signer Engine: TTL on NSEC3 was not updated on SOA
  Minimum change.
* OPENDNSSEC-421: Signer Engine: Fix assertion error in case NSEC3 hash
  algorithm in signconf is not SHA1.
* OPENDNSSEC-421: ods-kaspcheck: Check whether NSEC3 hash algorithm in kasp
  is valid.
* Bugfix: The time when inbound serial is acquired was reset invalidly,
  could cause OpenDNSSEC wanting AXFR responses while requesting IXFR (thanks
  Stuart Lau).
* Bugfix: Fix malform in Outbound IXFR/TCP subsequent packet (thanks Stuart
  Lau).
* OPENDNSSEC-398: The ods-ksmutil key rollover command does not work correctly
  when rolling all keys using the --policy option


OpenDNSSEC 1.4.0 - 2013-04-22

* Production release of 1.4
* Versioning scheme and release support policies updated
* Summary of changes in 1.4 can be found on the wiki:
  http://wiki.opendnssec.org/display/DOCS


OpenDNSSEC 1.4.0rc3 - 2013-03-15

* Further testing of OPENDNSSEC-387 completed, release returned to rc status.


OpenDNSSEC 1.4.0b3 - 2013-02-20

Note: This release is marked as a beta release (rather than rc3) due to 
OPENDNSSEC-387, which is a significant functional change compared to rc2. 

* OPENDNSSEC-387: Rollback of multi-threaded enforcer. Due to key allocation 
  issues the usefulness of the threaded enforcer is outweighed by the code
  complications. The option still remains in conf.xml for compatibility with
  existing use; but it will now be silently ignored.

Bugfixes:
* OPENDNSSEC-388: Signer Engine: Internal serial should take into account